# cargo-bundle-licenses

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  THIRDPARTY.yml  rust-toolchain.toml
.github/workflows/: build_and_test.yml  publish.yml
src/: bundle.rs  discovery.rs  finalized_license.rs  format.rs  found_license.rs  lib.rs  license.rs  main.rs  package_loader.rs
src/licenses/: 0BSD  Apache-2.0_WITH_LLVM-exception  BSD-2-Clause  BSD-3-Clause  GPL-2.0-or-later  GPL-3.0-or-later  ISC  MIT  Unicode-3.0  Unicode-DFS-2016  Zlib
