[package]
name = "cargo-bundle-licenses"
version = "0.2.2"
authors = ["Seth Stadick"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Bundle licensing of dependencies"
repository = "https://github.com/sstadick/cargo-bundle-licenses"
keywords = ["cargo", "licensing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bundle_licenses_lib"
path = "src/lib.rs"

[[bin]]
name = "cargo-bundle-licenses"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.43"
cargo_metadata = "0.14.0"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
regex = "1.5.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
serde_yaml = "0.8.20"
slug = "0.1.4"
structopt = "0.3.22"
strum = {version = "0.21.0", features = ["derive"]}
thiserror = "1.0.27"
toml = "0.5.8"


[build-dependencies]
built = {version = "0.5.1", features = ["git2"]}
strum = {version = "0.21.0", features = ["derive"]}
