[package]
name = "cargo-bundle-licenses"
version = "1.3.0"
authors = ["Seth Stadick"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Bundle licensing of dependencies"
repository = "https://github.com/sstadick/cargo-bundle-licenses"
keywords = ["cargo", "licensing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bundle_licenses_lib"
path = "src/lib.rs"

[[bin]]
name = "cargo-bundle-licenses"
path = "src/main.rs"
required-features = ["binary-dependencies"]

[features]
default = ["binary-dependencies"]
binary-dependencies = [ "anyhow", "env_logger", "structopt", "git-version" ]

[dependencies]
anyhow = { version = "1.0.70", optional = true }
cargo_metadata = "0.15.4"
env_logger = { version = "0.10.0", optional = true }
git-version = {version = "0.3.5", optional = true }
# https://doc.rust-lang.org/cargo/guide/cargo-home.html points to this for finding cargo home
home = "0.5.4"
itertools = "0.10.5"
log = "0.4.17"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
slug = "0.1.4"
spdx = "0.10.1"
structopt = { version = "0.3.26", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
